댓글관련 api수정 및 문서화
